Quintal do Pastel
fiz a parte responsiva para telas de notebooks e tablets.

--- a/index.html
+++ b/index.html
@@ -10,16 +10,20 @@
 </head>
 <body>
     <header>
+        <button class="abrir-menu"></button>
         <nav>
+            <button class="fechar-menu"></button>
             <h1><img src="img/logo.png" alt="Logo do Quintal do Pastel"></h1>
+            <div class="links-nav">
             <ul>
                 <li>
-                    <a href="#">Home</a>
+                    <a href="#" class="ativo">Home</a>
                     <a href="#">Sobre</a>
                     <a href="#">Cardápio</a>
                     <a href="#">Contato</a>
                 </li>
             </ul>
+            </div>
 
             <div>
                 <i class="fa-solid fa-phone"></i><span>(11) 91079-9496</span>
@@ -48,7 +52,7 @@
             <div class="conteudo-queridinhos">
                 <div>
                     <h3>Carne com queijo</h3>
-                    <p>Carne moída, mussarela e azeitona.</p>
+                    <p>Carne moída e mussarela.</p>
                     <img src="img/pastel-de-carne.webp" alt="Imagem do Pastel de Carne">
                 </div>
                 <div>
@@ -56,6 +60,7 @@
                     <p>Frango, milho e mussarela.</p>
                     <img src="img/pastel-de-frango.webp" alt="Imagem do Pastel de Frango">
                 </div>
+                <br>
                 <div>
                     <h3>Queijo</h3>
                     <p>Mussarela.</p>
@@ -192,6 +197,7 @@
             <a href="#">(11) 91079-9496</a>
             <a href="#">Segunda à Sábado: 09:00 às 19:00.</a>
             <a href="#">contato@quintaldopastel.com</a>
+            <a href="https://www.google.com.br/maps/place/Av.+Ros%C3%A1ria,+315+-+Vila+Rosaria,+S%C3%A3o+Paulo+-+SP,+08021-070/@-23.4980077,-46.434653,17z/data=!3m1!4b1!4m6!3m5!1s0x94ce63e777b01b57:0x785e37f5945fa59a!8m2!3d-23.4980126!4d-46.4320781!16s%2Fg%2F11c17fc7b4?entry=ttu">Av. Rosária, n°315</a>
         </div>
     </div>
         
