Quintal do Pastel
Deixei responsivo para tablet e para celulares.

--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 <body>
     <header>
         <button class="abrir-menu"></button>
-        <nav>
+        <nav class="menu">
             <button class="fechar-menu"></button>
             <h1><img src="img/logo.png" alt="Logo do Quintal do Pastel"></h1>
+
             <div class="links-nav">
             <ul>
                 <li>
@@ -23,7 +24,7 @@
                     <a href="#">Contato</a>
                 </li>
             </ul>
-            </div>
+        </div>
 
             <div>
                 <i class="fa-solid fa-phone"></i><span>(11) 91079-9496</span>
@@ -51,19 +52,18 @@
             <h2>os queridinhos da galera!</h2>
             <div class="conteudo-queridinhos">
                 <div>
-                    <h3>Carne com queijo</h3>
+                    <h3>Pastel de carne com queijo</h3>
                     <p>Carne moída e mussarela.</p>
                     <img src="img/pastel-de-carne.webp" alt="Imagem do Pastel de Carne">
                 </div>
                 <div>
-                    <h3>Frango com queijo</h3>
-                    <p>Frango, milho e mussarela.</p>
+                    <h3>Pastel de frango com queijo</h3>
+                    <p>Frango desfiado, milho e mussarela.</p>
                     <img src="img/pastel-de-frango.webp" alt="Imagem do Pastel de Frango">
                 </div>
-                <br>
                 <div>
-                    <h3>Queijo</h3>
-                    <p>Mussarela.</p>
+                    <h3>Pastel de queijo simples</h3>
+                    <p>queijo derretido e temperado. <b></b></p>
                     <img src="img/pastel-de-queijo.webp" alt="Imagem do Pastel de Queijo">
                 </div>
             </div>
