Quintal do Pastel
Melhorei a parte responsiva para celular.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <button class="abrir-menu"></button>
+            <button class="abrir-menu"></button>
         <nav class="menu">
             <button class="fechar-menu"></button>
             <h1><img src="img/logo.png" alt="Logo do Quintal do Pastel"></h1>
@@ -26,7 +26,7 @@
             </ul>
         </div>
 
-            <div>
+            <div class="number">
                 <i class="fa-solid fa-phone"></i><span>(11) 91079-9496</span>
             </div>
         </nav>
@@ -117,7 +117,7 @@
                     <i class="fa-solid
                     fa-quote-left"></i>
                     <img src="img/estrelas.svg" alt="Estrelas de avaliação">
-                    <p>O atendimento foi excepcional, a equipe é super atenciosa e prestativa. Além disso, o ambiente é muito acolhedor, tornando a refeição ainda mais prazerosa.</p>
+                    <p>O atendimento foi excepcional, é super atencioso e prestativo. Além disso, o ambiente é muito acolhedor, tornando a refeição ainda mais prazerosa.</p>
                     <h4>Fernando Lucas</h4>
                 </div>
                 </div>
