Quintal do Pastel
Página home completa.

--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
     <header>
-            <button class="abrir-menu"></button>
+            <button class="abrir-menu"></button> <div class="logo2">
+                <img src="img/logo.png" alt="Logo do topo">
+            </div>
         <nav class="menu">
             <button class="fechar-menu"></button>
             <h1><img src="img/logo.png" alt="Logo do Quintal do Pastel"></h1>
@@ -176,6 +179,10 @@
             </div>
         </section>
     </main>
+
+<div class="whatsapp">
+        <a onclick="linkWhats()" href="#"><img src="img/icon-whatsapp.png" alt="Icone Whatsapp"></a>
+</div>
 
 <footer>
     <div data-aos="fade-up" data-aos-duration="1500" class="rodape">
