Quintal do Pastel
Fiz a base da página de cardápio

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Quintal do Pastel</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/home.css">
 </head>
 <body>
 
@@ -21,10 +21,10 @@
             <div class="links-nav">
             <ul>
                 <li>
-                    <a href="#" class="ativo">Home</a>
-                    <a href="#">Sobre</a>
-                    <a href="#">Cardápio</a>
-                    <a href="#">Contato</a>
+                    <a href="index.html" class="ativo">Home</a>
+                    <a href="sobre.html">Sobre</a>
+                    <a href="cardapio.html">Cardápio</a>
+                    <a href="contato.html">Contato</a>
                 </li>
             </ul>
         </div>
@@ -85,14 +85,14 @@
 
                 <div>
                     <a href="cardapio.html">
-                    <h3><i class="fa-solid fa-martini-glass-empty"></i>Bebidas</h3>
+                    <h3><i class="fa-solid fa-burger"></i>Salgados</h3>
                     <p>Temos diversos sabores para você escolher!</p>
                     </a>
                 </div>
 
                 <div>
                     <a href="cardapio.html">
-                    <h3><i class="fa-solid fa-burger"></i>Salgados</h3>
+                    <h3><i class="fa-solid fa-martini-glass-empty"></i>Bebidas</h3>
                     <p>Temos diversos sabores para você escolher!</p>
                     </a>
                 </div>
@@ -134,6 +134,39 @@
                     <h4>Gabriel de Souza</h4>
                 </div>
                 </div>
+
+                <div>
+                <div class="slide slide-4">
+                    <h5>5.0</h5>
+                    <i class="fa-solid
+                    fa-quote-left"></i>
+                    <img src="img/estrelas.svg" alt="Estrelas de avaliação">
+                    <p>Incrível descoberta o Quintal do Pastel! Os pasteis são simplesmente divinos e com um sabor único. A massa é crocante na medida certa, e os recheios são bem generosos.</p>
+                    <h4>Amanda Ribeiro</h4>
+                </div>
+                </div>
+
+                <div>
+                <div class="slide slide-5">
+                    <h5>5.0</h5>
+                    <i class="fa-solid
+                    fa-quote-left"></i>
+                    <img src="img/estrelas.svg" alt="Estrelas de avaliação">
+                    <p>A variedade do cardápio é impressionante, tornando difícil escolher apenas um favorito. O atendimento é excepcional, a equipe é atenciosa e amigável, deixando-nos à vontade durante toda a visita.</p>
+                    <h4>Gustavo Pereira</h4>
+                </div>
+                </div>
+
+                <div>
+                <div class="slide slide-6">
+                    <h5>5.0</h5>
+                    <i class="fa-solid
+                    fa-quote-left"></i>
+                    <img src="img/estrelas.svg" alt="Estrelas de avaliação">
+                    <p> Com toda certeza, voltarei mais vezes e recomendo a todos os amantes de pasteis a conhecerem esse lugar maravilhoso. Parabéns ao Quintal do Pastel por proporcionar momentos gastronômicos tão prazerosos!</p>
+                    <h4>Juliana Almeida</h4>
+                </div>
+                </div>
               </div>
               
               <div class="botoes">
@@ -165,9 +198,30 @@
             </div>
             <h2><a href="https://www.instagram.com/quintaldopastel_/">@quintaldopastel_ </a><span>no Instagram</span></h2>
         </section>
+
+        <section class="ifood">
+            <div class="conteudo-ifood">
+            <div>
+                <h2>Em breve no Ifood...</h2>
+                <h3>Peça no Ifood, leve o Quintal do Pastel até sua casa!</h3>
+                <div class="link-ifood">
+                    <a href="#">Acesse nosso Ifood</a>
+                </div>
+            </div>
+            <div class="link-ifood-mobile">
+                <a href="#">Acesse nosso Ifood</a>
+            </div>
+            <div>
+                <a href="#" class="linkImg-ifood">
+                <img src="img/iphone-ifood.webp" alt="Foto do Ifood em um celular">
+                </a>
+            </div>
+            </div>  
+        </section>
+
         <section class="localizacao">
             <h2>Onde estamos?</h2>
-            <div class="conteudo-localizacao ">
+            <div class="conteudo-localizacao">
              
              <div>
                 <iframe src="https://www.google.com/maps/embed?pb=!4v1690235548412!6m8!1m7!1somSVWwrDWHebO_Q-i7ehFg!2m2!1d-23.49799042988012!2d-46.43230071621406!3f105.821018802808!4f-12.752040993054948!5f1.0733127976499879" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
