Quintal do Pastel
Melhorei a página de cardápio, tirei uma div do rodapé para celulares.

--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 <body>
 
     <header>
+        <div class="teste">
             <button class="abrir-menu"></button> <div class="logo2">
                 <img src="img/logo.png" alt="Logo do topo">
             </div>
+        </div>
         <nav class="menu">
             <button class="fechar-menu"></button>
             <h1><img src="img/logo.png" alt="Logo do Quintal do Pastel"></h1>
@@ -40,7 +42,7 @@
             <div>
                 <h2>Quintal do Pastel</h2>
                 <p>No Quintal do Pastel, trazemos até você uma experiência única e deliciosa de sabores autênticos e tradicionais.</p>
-                <a href="#">Leia mais</a>
+                <a href="sobre.html">Leia mais</a>
             </div>
             <div class="carousel-sobre">
                 <div class="carousel-container-sobre">
@@ -70,7 +72,7 @@
                     <img src="img/pastel-de-queijo.webp" alt="Imagem do Pastel de Queijo">
                 </div>
             </div>
-            <a href="#">Ver cardápio</a>
+            <a href="cardapio.html">Ver cardápio</a>
         </section>
 
         <section class="cardapio">
@@ -247,10 +249,10 @@
         
         <div>
             <h3>Quintal do Pastel</h3>
-            <a href="#">Home</a>
-            <a href="#">Sobre</a>
-            <a href="#">Cardápio</a>
-            <a href="#">Contato</a>
+            <a href="index.html">Home</a>
+            <a href="sobre.html">Sobre</a>
+            <a href="cardapio.html">Cardápio</a>
+            <a href="contato.html">Contato</a>
         </div>
         
         <div>
