Quintal do Pastel
Troquei a cor de fundo do rodapé e criei a página de "sobre".

--- a/index.html
+++ b/index.html
@@ -6,16 +6,14 @@
     <title>Quintal do Pastel</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
 
     <header>
-        <div class="teste">
             <button class="abrir-menu"></button> <div class="logo2">
                 <img src="img/logo.png" alt="Logo do topo">
             </div>
-        </div>
         <nav class="menu">
             <button class="fechar-menu"></button>
             <h1><img src="img/logo.png" alt="Logo do Quintal do Pastel"></h1>
