Quintal do Pastel
Arrumei a seção do ifood

--- a/sobre.html
+++ b/sobre.html
@@ -35,6 +35,20 @@
         </nav>
     </header>
 
+    <main>
+        <section class="historia">
+            <div>
+                <div>
+                    <img src="img/post1.png" alt="">
+                </div>
+
+                <div>
+                    <h2>História</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur illo dicta vel pariatur consequuntur. Explicabo neque, nulla cum magnam vel assumenda eius nobis eaque est maxime, doloribus voluptate optio iusto!</p>
+                </div>
+            </div>
+        </section>
+    </main>
 
 
 
