Quintal do Pastel
Mudando o código de HTML para PHP

--- a/sobre.html
+++ b/sobre.html
@@ -15,11 +15,11 @@
 
         <header>
             <button class="abrir-menu"></button> <div class="logo2">
-                <img src="img/logo.png" alt="Logo do topo">
+               <img src="img/logo.png" alt="Logo do topo">
             </div>
             <nav class="menu">
                 <button class="fechar-menu"></button>
-                <h1><img src="img/logo.png" alt="Logo do Quintal do Pastel"></h1>
+                <h1><a href="index.html"><img src="img/logo.png" alt="Logo do Quintal do Pastel"></a></h1>
 
                 <div class="links-nav">
                     <ul>
