--- a/cardapio.html
+++ b/cardapio.html
@@ -18,7 +18,7 @@
             </div>
             <nav class="menu">
                 <button class="fechar-menu"></button>
-                <h1><img src="img/logo.png" alt="Logo do Quintal do Pastel"></h1>
+                <h1><a href="index.html"><img src="img/logo.png" alt="Logo do Quintal do Pastel"></a></h1>
 
                 <div class="links-nav">
                     <ul>
